manifest/05-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: rd-talk
spec:
  selector:
    app: api-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
  type: ClusterIP
