manifest/06-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rd-talk-ing
  namespace: rd-talk
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 80
